[tool.poetry]
name = "materia"
version = "0.1.0"
description = ""
authors = ["\"\""]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8, ^3.9"
rich = "^9.2.0"
pydantic = "^1.7.2"
pydantic-choices = "^0.1.1"
typer = "^0.3.2"
prefect = {extras = ["templates", "viz", "aws", "spacy"], version = "^0.13.17"}

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"
black = "^20.8b1"
tox = "^3.20.1"
pytest-cov = "^2.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
